tests/baselines/reference/collisionCodeGenModuleWithMemberClassConflict.errors.txt
collisionCodeGenModuleWithMemberClassConflict.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionCodeGenModuleWithMemberClassConflict.ts(7,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionCodeGenModuleWithMemberClassConflict.ts (2 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class m1 {
        }
    }
    var foo = new m1.m1();
    
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class m2 {
        }
    
        export class _m2 {
        }
    }
    var foo = new m2.m2();
    var foo = new m2._m2();